; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_attrcache.c_git_attr_cache__get.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_attrcache.c_git_attr_cache__get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ENOTFOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_attr_cache__get(i32** %0, i32* %1, i32* %2, i32 %3, i8* %4, i8* %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i32*, align 8
  store i32** %0, i32*** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32 %3, i32* %13, align 4
  store i8* %4, i8** %14, align 8
  store i8* %5, i8** %15, align 8
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i32 0, i32* %18, align 4
  %23 = load i32*, i32** %11, align 8
  %24 = call i32* @git_repository_attr_cache(i32* %23)
  store i32* %24, i32** %19, align 8
  store i32* null, i32** %20, align 8
  store i32* null, i32** %21, align 8
  store i32* null, i32** %22, align 8
  %25 = load i32*, i32** %11, align 8
  %26 = load i32*, i32** %12, align 8
  %27 = load i32, i32* %13, align 4
  %28 = load i8*, i8** %14, align 8
  %29 = load i8*, i8** %15, align 8
  %30 = call i32 @attr_cache_lookup(i32** %21, i32** %20, i32* %25, i32* %26, i32 %27, i8* %28, i8* %29)
  store i32 %30, i32* %18, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %8
  %33 = load i32, i32* %18, align 4
  store i32 %33, i32* %9, align 4
  br label %90

34:                                               ; preds = %8
  %35 = load i32*, i32** %21, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %37, label %43

37:                                               ; preds = %34
  %38 = load i32*, i32** %11, align 8
  %39 = load i32*, i32** %12, align 8
  %40 = load i32*, i32** %21, align 8
  %41 = call i32 @git_attr_file__out_of_date(i32* %38, i32* %39, i32* %40)
  store i32 %41, i32* %18, align 4
  %42 = icmp sgt i32 %41, 0
  br i1 %42, label %43, label %51

43:                                               ; preds = %37, %34
  %44 = load i32*, i32** %11, align 8
  %45 = load i32*, i32** %12, align 8
  %46 = load i32*, i32** %20, align 8
  %47 = load i32, i32* %13, align 4
  %48 = load i32, i32* %16, align 4
  %49 = load i32, i32* %17, align 4
  %50 = call i32 @git_attr_file__load(i32** %22, i32* %44, i32* %45, i32* %46, i32 %47, i32 %48, i32 %49)
  store i32 %50, i32* %18, align 4
  br label %51

51:                                               ; preds = %43, %37
  %52 = load i32*, i32** %22, align 8
  %53 = icmp ne i32* %52, null
  br i1 %53, label %54, label %67

54:                                               ; preds = %51
  %55 = load i32*, i32** %19, align 8
  %56 = load i32*, i32** %22, align 8
  %57 = call i32 @attr_cache_upsert(i32* %55, i32* %56)
  store i32 %57, i32* %18, align 4
  %58 = icmp slt i32 %57, 0
  br i1 %58, label %59, label %62

59:                                               ; preds = %54
  %60 = load i32*, i32** %22, align 8
  %61 = call i32 @git_attr_file__free(i32* %60)
  br label %66

62:                                               ; preds = %54
  %63 = load i32*, i32** %21, align 8
  %64 = call i32 @git_attr_file__free(i32* %63)
  %65 = load i32*, i32** %22, align 8
  store i32* %65, i32** %21, align 8
  br label %66

66:                                               ; preds = %62, %59
  br label %67

67:                                               ; preds = %66, %51
  %68 = load i32, i32* %18, align 4
  %69 = icmp slt i32 %68, 0
  br i1 %69, label %70, label %86

70:                                               ; preds = %67
  %71 = load i32*, i32** %21, align 8
  %72 = icmp ne i32* %71, null
  br i1 %72, label %73, label %79

73:                                               ; preds = %70
  %74 = load i32*, i32** %19, align 8
  %75 = load i32*, i32** %21, align 8
  %76 = call i32 @attr_cache_remove(i32* %74, i32* %75)
  %77 = load i32*, i32** %21, align 8
  %78 = call i32 @git_attr_file__free(i32* %77)
  store i32* null, i32** %21, align 8
  br label %79

79:                                               ; preds = %73, %70
  %80 = load i32, i32* %18, align 4
  %81 = load i32, i32* @GIT_ENOTFOUND, align 4
  %82 = icmp eq i32 %80, %81
  br i1 %82, label %83, label %85

83:                                               ; preds = %79
  %84 = call i32 (...) @git_error_clear()
  store i32 0, i32* %18, align 4
  br label %85

85:                                               ; preds = %83, %79
  br label %86

86:                                               ; preds = %85, %67
  %87 = load i32*, i32** %21, align 8
  %88 = load i32**, i32*** %10, align 8
  store i32* %87, i32** %88, align 8
  %89 = load i32, i32* %18, align 4
  store i32 %89, i32* %9, align 4
  br label %90

90:                                               ; preds = %86, %32
  %91 = load i32, i32* %9, align 4
  ret i32 %91
}

declare dso_local i32* @git_repository_attr_cache(i32*) #1

declare dso_local i32 @attr_cache_lookup(i32**, i32**, i32*, i32*, i32, i8*, i8*) #1

declare dso_local i32 @git_attr_file__out_of_date(i32*, i32*, i32*) #1

declare dso_local i32 @git_attr_file__load(i32**, i32*, i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @attr_cache_upsert(i32*, i32*) #1

declare dso_local i32 @git_attr_file__free(i32*) #1

declare dso_local i32 @attr_cache_remove(i32*, i32*) #1

declare dso_local i32 @git_error_clear(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
